--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Jay Chuang</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
 
   <script src="https://kit.fontawesome.com/f61d098a3b.js" crossorigin="anonymous"></script>
 </head>
