Add google verification

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="VHbMDC07DsDM-2PzIBtZ6yRTmRofNe4yi0MwrVOtnxI" />
   <meta charset="utf-8" />
   <title>Jay Chuang</title>
   <base href="/" />
